added JWT auth service. added user login api. added token check in middleware. added password encrypt and verify methods.
