# errors/middleware.go
@@ -1,7 +1,12 @@
 package errors
 
 import (
+	"fmt"
+	"net/http"
+
+	"github.com/dgrijalva/jwt-go"
 	"github.com/gin-gonic/gin"
+	"github.com/yerzhan-karatay/survey-webapp-backend/services/security"
 )
 
 // ErrorStructure is the response structure for error messages
@@ -29,5 +34,23 @@ func HandleHTTPError() gin.HandlerFunc {
 			Error: err.Err.Error(),
 		})
 		return
+	}
+}
+
+// AuthorizeJWT authorize an access
+func AuthorizeJWT() gin.HandlerFunc {
+	return func(c *gin.Context) {
+		const BearerSchema = "Bearer"
+		authHeader := c.GetHeader("Authorization")
+		tokenString := authHeader[len(BearerSchema):]
+		token, err := security.JWTAuthService().ValidateToken(tokenString)
+		if token.Valid {
+			claims := token.Claims.(jwt.MapClaims)
+			fmt.Println(claims)
+		} else {
+			fmt.Println(err)
+			c.AbortWithStatus(http.StatusUnauthorized)
+		}
+
 	}
 }
